--- a/themes/sgsc/sass/style.scss
+++ b/themes/sgsc/sass/style.scss
@@ -82,4 +82,4 @@ Nicolas Gallagher and Jonathan Neal http://necolas.github.com/normalize.css/
 @import "search";
 @import "about-partners";
 @import "about-child";
-@import "form-membership-english";
+// @import "form-membership-english";
