--- a/themes/sgsc/sass/_programs.scss
+++ b/themes/sgsc/sass/_programs.scss
@@ -108,7 +108,7 @@
     display: flex;
     justify-content: center;
     @media screen and (min-width: 480px) {
-      font-size: 2.5rem;
+      font-size: 2.4rem;
     }
   }
   #tribe-bar-views {
@@ -127,6 +127,11 @@
   align-items: center;
   height: 2.3rem;
   width: 2.3rem;
+  @media screen and(min-width: $mobile_width) {
+    height: 55px;
+    width: 55px;
+    font-size: 32px;
+  }
   a {
     text-decoration: none;
     color: $black;
@@ -150,6 +155,9 @@
 .tax-program-type {
   .header {
     position: relative;
+    @media screen and(min-width: 480px){
+      width: 100%;
+    }
   }
   .entry-header {
     height: 7.3rem;
@@ -229,7 +237,18 @@
   }
 }
 
-@media screen and (min-width: 480px) {
+@media screen and (min-width: $mobile_width) {
+  .program-grid {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+  }
+  li {
+    flex: 0 1 47%;
+  }
+}
+
+@media screen and (min-width: $tablet_width) {
   .tax-program-type {
     .donate-btn {
       height: 4.5rem;
@@ -239,14 +258,6 @@
     .content-area {
       width: 1024px;
       margin: auto;
-    }
-    .program-grid {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: space-between;
-      li {
-        flex: 0 1 47%;
-      }
     }
     .entry-header {
       height: 10rem;
@@ -261,7 +272,7 @@
   }
 }
 
-@media screen and (min-width:480px) {
+@media screen and (min-width: $tablet_width) {
   .donate-btn {
     height: 5rem;
     width: 5rem;
