--- a/themes/sgsc/sass/_events.scss
+++ b/themes/sgsc/sass/_events.scss
@@ -2,6 +2,10 @@
 	width: initial;
 }
 
+.tribe-events-user-recurrence-toggle {
+	display: none;
+}
+
 .events-archive {
 	.event-header {
 		display: flex;
@@ -19,23 +23,23 @@
 	
 	.tribe-events-list-event-title {
 		position: absolute;
-    right: 0;
+		right: 0;
 		top: 0;
-    width: 5.4rem;
-    background: $orange;
-    border-bottom-left-radius: 10px;
-    border-bottom-right-radius: 10px;
+		width: 6rem;
+		height: auto;
+		background: $orange;
+		border-bottom-left-radius: 10px;
+		border-bottom-right-radius: 10px;
 		margin: 0;
 		text-align: center;
 		hyphens: auto;
 		font-size: 1.2rem;
 	}
-	
 	.tribe-events-event-image {
 		width: 100% !important;
-    height: 100%;
-    position: absolute;
-    overflow: hidden;
+		height: 100%;
+		position: absolute;
+		overflow: hidden;
 
 		&img {
 			height: auto;
@@ -48,7 +52,7 @@
 	}
 	.event-backup-img {
 		height: 100%;
-    padding: 1rem;
+    	padding: 1rem;
 		opacity: 0.3;
 	}
 
@@ -65,11 +69,11 @@
 
 	.events-title {
 		display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100vw;
-    height: 7.3rem;
-    background-color: #f5a623;
+		justify-content: center;
+		align-items: center;
+		width: 100vw;
+		height: 7.3rem;
+		background-color: #f5a623;
 	}
 
 	.type-tribe_events {
@@ -109,7 +113,7 @@
 	.tribe-events-event-cost {
 		clear: both;		
 		margin-left: 1rem;
-    font-size: 1.3rem;
+    	font-size: 1.3rem;
 		display: inline-block;
 		span {
 			padding: 0;
@@ -130,7 +134,7 @@
 	}
 	.tribe-events-sub-nav {
 		display: flex;
-    justify-content: center;
+    	justify-content: center;
 	}
 	.tribe-events-nav-right, .tribe-events-nav-left {
 		a {
@@ -151,18 +155,18 @@
 	}
 	.gallery-widget {
 		margin: 0;
-    padding: 0;
-    list-style: none;
+		padding: 0;
+		list-style: none;
 	}
 	.widget-title {
 		background-color: #45cdcb;
-    width: 100%;
-    height: 20rem;
+	    width: 100%;
+  		height: 20rem;
 		display: flex;
 		align-items: center;
-    text-align: center;
-    font-size: 2.25rem;
-    line-height: 2.5rem;
+		text-align: center;
+		font-size: 2.25rem;
+		line-height: 2.5rem;
 		padding: 0 1rem;
 	}
 	.gallery-widget-img {
@@ -198,9 +202,9 @@
 	}
 	a.tribe-events-ical.tribe-events-button {
 		float: none;
-    margin-left: 3rem;
-    font-size: 1rem;
-    padding: 0;
+		margin-left: 3rem;
+		font-size: 1rem;
+		padding: 0;
 	}
 }
 
@@ -211,14 +215,13 @@
 			height: 10rem;
 		}
 		.donate-btn {
-      height: 4.5rem;
-      width: 4.5rem;
-      font-size: 2.5rem;
-	}
-	
-	.tribe-events-calendar td.tribe-events-present {
-		background-color: $orange;
-	}
+			height: 4.5rem;
+			width: 4.5rem;
+			font-size: 2.5rem;
+		}
+		.tribe-events-calendar td.tribe-events-present {
+			background-color: $orange;
+		}
 		.site-content {
 			display: flex;
 			width: 1024px;
@@ -237,7 +240,7 @@
 		}
 		.tribe-events-page-title {
 			font-size: 2.5rem;
-    	margin: 0;
+    		margin: 0;
 		}
 		.event-header {
 			height: 20rem;
