cleaned up breakpoints and fixed variable breakpoints

--- a/themes/sgsc/sass/_about-our-board.scss
+++ b/themes/sgsc/sass/_about-our-board.scss
@@ -145,7 +145,7 @@
 }
 
 //Tablet
-@media screen and (min-width: 480px) {
+@media screen and (min-width: $mobile_width) {
   .page-template-page-about-our-board {
     .entry-header {
       max-width: 768px;
@@ -228,7 +228,7 @@
 }
 
 //Desktop
-@media screen and (min-width: 769px) {
+@media screen and (min-width: $tablet_width) {
   .page-template-page-about-our-board {
     .entry-header {
       max-width: 1024px;
