--- a/themes/sgsc/sass/_about-child.scss
+++ b/themes/sgsc/sass/_about-child.scss
@@ -35,7 +35,7 @@
   }
 }
 
-@media screen and (min-width:480px) {
+@media screen and (min-width: $mobile_width) {
   .page-template-page-about-sub {
     .site-content {
       width: 768px;
@@ -68,7 +68,7 @@
     }
   }
 }
-@media screen and (min-width:769px) {
+@media screen and (min-width: $tablet_width) {
   .page-template-page-about-sub {
     .site-content {
       width: 1024px;
