--- a/themes/sgsc/sass/_footer.scss
+++ b/themes/sgsc/sass/_footer.scss
@@ -197,7 +197,7 @@ span.wpcf7-not-valid-tip {
     font-size: 12px;    
   }
 }
-@media all and (min-width: 769px) {
+@media all and (min-width: $mobile_width) {
   .site-footer {
     width: 1024px;
     margin: 0 auto;
