--- a/themes/sgsc/sass/_programs.scss
+++ b/themes/sgsc/sass/_programs.scss
@@ -3,7 +3,7 @@
   background-position: 95% -3%;
   background-size: 150%;
   background-repeat: no-repeat;
-  @media screen and (min-width: 480px) {
+  @media screen and (min-width: $mobile_width) {
     height: 22.25rem;
     background-position: 51% 6%;
     background-size: 100%;
@@ -23,7 +23,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    @media screen and(min-width: 480px) {
+    @media screen and(min-width: $mobile_width) {
       height: 10rem;
     }
   }
@@ -32,7 +32,7 @@
     font-size: 1.4rem;
     width: 9rem;
     text-align: center;
-    @media screen and (min-width: 480px) {
+    @media screen and (min-width: $mobile_width) {
       font-weight: 400;
       font-size: 40px;
       width: 100%;
@@ -65,13 +65,13 @@
   flex-direction: column;
   align-items: center;
   
-  @media screen and (min-width: 480px) {
+  @media screen and (min-width: $mobile_width) {
     flex-flow: row wrap;
     justify-content: space-around;
   }
   
   .program-link{
-    @media screen and (min-width: 480px) {
+    @media screen and (min-width: $mobile_width) {
       flex: 0 1 43%;
       height: 10rem;
       margin: 2rem 0;
@@ -82,13 +82,13 @@
     display: flex;
     justify-content: center;
     align-items: center;	
-    @media screen and (min-width: 480px) {
+    @media screen and (min-width: $mobile_width) {
       width: initial;
     }
 	}
 
   a:last-child {
-    @media screen and (min-width: 480px){
+    @media screen and (min-width: $mobile_width){
     margin: 2rem 0;
     flex: 0 1 93%;
     }
@@ -107,7 +107,7 @@
     border: 4px solid $orange;
     display: flex;
     justify-content: center;
-    @media screen and (min-width: 480px) {
+    @media screen and (min-width: $mobile_width) {
       font-size: 2.4rem;
     }
   }
@@ -155,7 +155,7 @@
 .tax-program-type {
   .header {
     position: relative;
-    @media screen and(min-width: 480px){
+    @media screen and(min-width: $mobile_width){
       width: 100%;
     }
   }
