--- a/themes/sgsc/sass/_join-us.scss
+++ b/themes/sgsc/sass/_join-us.scss
@@ -116,18 +116,52 @@
 
 @media all and (min-width: $mobile_width) {
   .page-template-page-join-us, .post-type-archive-volunteer {
+
     .entry-header {
-      width: $d_width;
+      width: 768px;
+    }
+
+    .join-us-section {
+      display: flex;
+      padding-bottom: initial;
+      margin: 0 auto;
+      justify-content: space-between;
+      width: 768px;
+      margin-top: 2rem;
+      margin-bottom: 28px;
+      max-width: none;
+      flex-direction: row;
+      background-size: 100%;
+    }
+    .rectangle {
+      margin-top: initial;
+      height: 280px;
+      box-sizing: border-box;
+      width: 225px;
+      background-color: rgba(255, 255, 255, 0.8);
+      border: 4px solid rgba(255, 255, 255, 0.0);
+      &:hover {
+        border: 4px solid $black;
+      }
+    }
+  }
+}
+
+@media all and (min-width: $tablet_width) {
+  .page-template-page-join-us, .post-type-archive-volunteer {
+
+
+    .entry-header {
+      width: 1024px;
     }
     .join-us-section {
       display: flex;
       padding-bottom: initial;
       margin: 0 auto;
       justify-content: space-between;
-      width: $d-width;
-      background-image: url("../../assets/images/149-46.jpg");
+      // width: 1024px;
       margin-bottom: 28px;
-      max-width: none;
+      width: 1024px;
       flex-direction: row;
       background-size: 100%;
     }
